# optix

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  TODO  vcpkg.json
common/: Box.cpp  Box.h  CUDABuffer.cpp  CUDABuffer.h  Camera.h  CameraFrame.cpp  CameraFrame.h  CameraFrameManip.cpp  CameraFrameManip.h  CudaUtil.cpp  CudaUtil.h  EnumRayType.h  FlyModeManip.cpp  FlyModeManip.h  GLFCameraWindow.cpp  GLFCameraWindow.h  GLFWindow.cpp  GLFWindow.h  IOUtil.cpp  IOUtil.h  InspectModeManip.cpp  InspectModeManip.h  LaunchParams.h  Model.cpp  Model.h  OptixUtil.cpp  OptixUtil.h  QuadLight.h  Random.h  Texture.h  TriangleMesh.cpp  TriangleMesh.h  TriangleMeshSBTData.h
config/: CMakeGenerated.h.in
dep/CMake/: FindOptiX.cmake
example01_helloOptix/: CMakeLists.txt  main.cpp
example02_pipelineAndRayGen/: CMakeLists.txt  CUDABuffer.cpp  CUDABuffer.h  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  main.cpp
example02_pipelineAndRayGen/optixir/: devicePrograms.cu
example03_inGLFWindow/: CMakeLists.txt  SampleRenderer.cpp  SampleWindow.cpp  main.cpp
example03_inGLFWindow/optixir/: devicePrograms.cu
example04_firstTriangleMesh/: CMakeLists.txt  SampleRenderer.cpp  SampleRenderer.h  SampleWindow.h
example04_firstTriangleMesh/optixir/: devicePrograms.cu
example05_firstSBTData/: CMakeLists.txt  SampleRenderer.cpp  SampleRenderer.h  SampleWindow.cpp  SampleWindow.h  main.cpp
example05_firstSBTData/optixir/: devicePrograms.cu
example06_multipleObjects/: CMakeLists.txt  SampleRenderer.cpp  SampleWindow.h  main.cpp
example06_multipleObjects/optixir/: devicePrograms.cu
example07_firstRealModel/: CMakeLists.txt  SampleRenderer.cpp  SampleRenderer.h  SampleWindow.cpp  main.cpp
example07_firstRealModel/optixir/: devicePrograms.cu
example08_addingTextures/: CMakeLists.txt  SampleRenderer.cpp  SampleRenderer.h
example08_addingTextures/optixir/: devicePrograms.cu
example09_shadowRays/: CMakeLists.txt  SampleRenderer.cpp  SampleWindow.h
example09_shadowRays/optixir/: devicePrograms.cu
example10_softShadows/: CMakeLists.txt  SampleRenderer.cpp  SampleWindow.cpp
example11_denoiseColorOnly/: CMakeLists.txt  SampleRenderer.cpp  SampleRenderer.h  SampleWindow.cpp  SampleWindow.h  main.cpp
example11_denoiseColorOnly/optixir/: devicePrograms.cu
example12_denoiseSeparateChannels/: CMakeLists.txt  SampleRenderer.cpp  SampleRenderer.h  SampleWindow.cpp
example12_denoiseSeparateChannels/cuda/: toneMap.cu
example12_denoiseSeparateChannels/optixir/: devicePrograms.cu
src/: CMakeLists.txt  OptixUtil.cpp  OptixUtil.h  main.cpp
